
10-May-2009 (Zesstra)
  - (smalloc.c, slaballoc.) Replaced SINT by GRANULARITY
    The define SINT was ill-named. All occurences were renamed to GRANULARITY
    which describes the semantics of the define much better and it is now
    defined as being sizeof(word_t).
    Additionally, MEM_ALIGN is now defined as being the same as GRANULARITY.

06-May-2009 (Zesstra)
  - (hosts/) The hosts/ directory was removed.
    Removed the whole hosts/ directory because it wasn't maintained for a long
    time and most of the systems were anyway dead for a long time (#625).
    This removed --enable-use-system-crypt as well (#624).
  - Removed checks and special code for OS2 and __EMX__.
  - Removed check for MSDOS.
  - Removed checks and special code for __BEOS__.
  - Removed checks and special code for AMIGA.
  - Removed checks and work-arounds for very old gcc compilers (2.x, <3.2).
  - Removed checks and special code for SunOS4 (The last release of SunOS4
    was in 1994.)
  - Removed checks and special code for Ultrix.
  - Removed MSDOS filesystem semantics (Checks for MSDOS_FS and special
    behaviour (e.g. \\ as path separator).
  - (prolang.y) Another fix in insert_pop_value().
    In case of F_NUMBER was the operation itself not taken into account.
    Replaced hard-coded numbers by the appropriate sizeof() in all other cases
    as well.

05-May-2009 (Zesstra)
  - (prolang.y)
    Fix inconsistent F_NUMBER generation (#628).
    The compiler generates F_NUMBER at more than one places. ins_number()
    only writes a int32 into the bytecode, all the other places write a p_int,
    which interpret.c expects.
    The patch adds ins_p_int(), upd_p_int() and read_p_int().
    ins_number() now calls ins_p_int() upon generating the F_NUMBER instruction.
    Additionally upon storing a number (L_NUMBER) and in the unary '-'
    upd_p_int() is called instead of a direct memcpy(). (memcpy() is a bit
    faster, but I think it is much more risky to forget a place to change...)